# pycpidr

./: README.md  main.py  pyproject.toml
.github/: unit_tests.yml
.github/workflows/: unit_tests.yml
pycpidr/: __init__.py  depid.py  idea_density_rater.py  idea_density_rater_rules.py  tagger.py  word_item.py
pycpidr/scripts/: install.py
pycpidr/utils/: constants.py  word_search_utils.py
python_cpidr/: idea_density_rater.py  idea_density_rater_rules.py  tagger.py  word_item.py
tests/: test_depid.py  test_idea_density_rater.py  test_idea_density_rater_rules.py  test_tagger.py
tests/utils/: test_word_search_utils.py
