[tool.poetry]
name = "pycpidr"
version = "0.1.0"
description = "Python port of the CPIDR 3.2 idea density rater."
authors = ["Jason Robison <jrrobison@protonmail.com>"]
readme = "README.md"
license = "GNU GPLv2"
homepage = "https://github.com/yourusername/PyCPIDR"
repository = "https://github.com/yourusername/PyCPIDR"
keywords = ["nlp", "idea density", "linguistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "pycpidr" }, { include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.poetry.scripts]
post-install = "scripts.install:download_spacy_model"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
