[tool.poetry]
name = "pycpidr"
version = "0.3.0"
description = "Python library for computing propositional idea density"
authors = ["Jason Robison <jrrobison@protonmail.com>"]
readme = "README.md"
license = "GNU GPLv2"
homepage = "https://github.com/jrrobison1/PyCPIDR"
repository = "https://github.com/jrrobison1/PyCPIDR"
keywords = ["nlp", "idea density", "linguistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "pycpidr" }]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.5"
python-levenshtein = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
